# ChangeLog for net-misc/dhcp
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcp/ChangeLog,v 1.99 2006/05/23 13:03:28 uberlord Exp $

*dhcp-3.0.3-r9 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org>
  files/dhcp-3.0.3-dhclient-resolvconf.patch, +dhcp-3.0.3-r9.ebuild:
  dhclient-script now works with invalid, RFC violating but sometimes used
  space seperated domain names, #134101 thanks to Jan Spitalnik.

*dhcp-3.0.3-r8 (23 May 2006)

  23 May 2006; Roy Marples <uberlord@gentoo.org> +dhcp-3.0.3-r8.ebuild:
  As 3.0.4 is a bust for 64-bit servers, push fixes downto 3.0.3-r8.

*dhcp-3.0.4-r1 (11 May 2006)

  11 May 2006; Roy Marples <uberlord@gentoo.org> files/dhcpd.conf,
  files/dhcpd.init, +dhcp-3.0.4-r1.ebuild:
  Fixed typo in conf.d/dhcpd and fixed chroot pidfile, #133019 thanks to Hod.

  10 May 2006; Roy Marples <uberlord@gentoo.org>
  files/dhcp-3.0.3-dhclient-metric.patch,
  files/dhcp-3.0.3-dhclient-no-down.patch:
  Tweak patches so that IF_METRIC is applied to the subnet route too.

  09 May 2006; Roy Marples <uberlord@gentoo.org> dhcp-3.0.4.ebuild:
  Correct location for default dhclient conf and pid files.

*dhcp-3.0.4 (05 May 2006)

  05 May 2006; Roy Marples <uberlord@gentoo.org>
  +files/dhcp-3.0.4-dhclient-stdin-conf.patch, +dhcp-3.0.4.ebuild:
  New upstream release.

*dhcp-3.0.4_rc1 (21 Apr 2006)
*dhcp-3.0.3-r7 (21 Apr 2006)

  21 Apr 2006; Roy Marples <uberlord@gentoo.org>
  +files/dhcp-3.0.3-dhclient-dbus.patch, +files/dhcp-3.0.3-x-option.patch,
  +dhcp-3.0.3-r7.ebuild, +dhcp-3.0.4_rc1.ebuild:
  New patches for dbus and eXtended option environment support
  which should allow us to be used by NetworkManager.

  20 Apr 2006; Roy Marples <uberlord@gentoo.org>
  files/dhcp-3.0.3-dhclient-hostname.patch,
  files/dhcp-3.0.3-dhclient-metric.patch,
  files/dhcp-3.0.3-dhclient-mtu.patch,
  +files/dhcp-3.0.3-dhclient-no-down.patch, dhcp-3.0.3-r6.ebuild,